k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: homepage-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
