k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: homepage-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
